Make sure .sub_menu children are visible against white of missing hero

--- a/public/style.css
+++ b/public/style.css
@@ -131,6 +131,9 @@ html:not(:has(link#k[href*=sites6], link#k[href*=template5])) .article_index img
   background-color: #12b0d1;
   margin-bottom: 50px;
 }
+.section_root #chabad_main_content:not(:has(#content_banner:first-child)) #chabad_head .sub_menu {
+  background-color: #12b0d1;
+}
 
 #chabad_head {
   z-index: 1;
